--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>Calculator</title>
 </head>
 <body>
+     <div id="logo">
+        <img src="bimal.jpg" alt="">
+    </div>
     <div id="calculator-container">
         <div id="display">
     <div id="displayinput">
